kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/025_weaving_in_kermeta_aspect6.kmt
/* $Id: 025_weaving_in_kermeta_aspect6.kmt,v 1.1 2007-02-16 07:42:36 dvojtise Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest6;

using kermeta::standard
//------------------------------
// Base classes
//------------------------------
class A {


}

class B inherits A {}
class C inherits kermeta::kunit::Assert{

	reference a : A
	attribute b : B

}

//------------------------------
// Aspect classes
//------------------------------

@aspect "true"
class C {


		
	attribute a : A // invalid, should fail because this is not a reference like it is defined in the base ...
	attribute c : A
	attribute d : B

}

/* END OF FILE */